# esp32-s3-boy_fw

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/doom/: CMakeLists.txt  component.mk
components/doom/src/: Kconfig  d_loop.c  doomtype.h  g_game.c  i_endoom.c  i_gbsound.c  i_video.c  m_argv.c  m_menu.c  m_misc.c  m_misc.h  net_common.c  net_server.c  p_map.c  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  r_draw.c  r_main.c  r_things.c  statdump.c
components/doom/src/port/: def_extern.h  doom.h  doom_logo.c  mem.c  mem.h
components/esp32-s3-boy-hal/: CMakeLists.txt  component.mk
components/esp32-s3-boy-hal/bsp/: bsp.h
components/esp32-s3-boy-hal/common/core/: qbuffer.c  qbuffer.h
components/esp32-s3-boy-hal/common/hw/include/: battery.h  buzzer.h  cdc.h  cli.h  flash.h  gpio.h  i2c.h  i2s.h  lcd.h  log.h  pwm.h  sd.h  spi.h  uart.h  usb.h  ymodem.h
components/esp32-s3-boy-hal/common/hw/include/lcd/: st7789_regs.h
components/esp32-s3-boy-hal/hw/: hw.c  hw.h  hw_def.h
components/esp32-s3-boy-hal/hw/driver/: buzzer.c  cdc.c  cli.c  fatfs.c  gpio.c  lcd.c  log.c  nvs.c  pwm.c  sd.c  uart.c  ymodem.c
components/esp32-s3-boy-hal/hw/driver/hangul/: font_eng.h  font_han.h
components/esp32-s3-boy-hal/hw/driver/lcd/: logo_img.c
components/gnuboy/: CMakeLists.txt
components/gnuboy/src/: Version  defs.h  emu.c  gnuboy.h  lcd.c  newsound.c  palette.c  path.c  sound.c
components/gnuboy/src/port/: esp32-boy.c
fw/doom/: CMakeLists.txt
fw/doom/main/ap/doom/src/: d_main.c  i_main.c  i_sound.c  m_config.c  net_query.c
fw/gnuboy/main/ap/: ap.cpp
fw/gnuboy/main/ap/gnuboy/src/: Makefile.dingoo  fastmem.h  gnuboy_readme.txt  lcdc.c  loader.c  main.c
fw/gnuboy/main/ap/gnuboy/src/docs/: CHANGES
fw/gnuboy/main/ap/gnuboy/src/port/: filer.c
fw/launcher/: CMakeLists.txt
fw/s3-boy-doom/: CMakeLists.txt
fw/s3-boy-doom/main/: CMakeLists.txt  main.h
fw/s3-boy-doom/main/ap/: ap.cpp
fw/s3-boy-doom/main/ap/doom/src/: config.h  d_event.c  d_iwad.c  deh_ptr.c  gusconf.c  hu_stuff.c  i_cdmus.c  i_joystick.c  i_swap.h  i_system.c  i_timer.c  i_video.h  net_loop.c  p_ceilng.c  p_plats.c  r_bsp.c  r_plane.c  s_sound.c  w_file_stdc.c
fw/s3-boy-fmsx/: CMakeLists.txt
fw/s3-boy-fmsx/main/: CMakeLists.txt
fw/s3-boy-fmsx/main/ap/: ap.cpp
fw/s3-boy-fmsx/main/ap/fmsx/core/EMULib/: Console.c  EMULib.c  EMULib.h  FDIDisk.c  Floppy.c  Sound.c  Sound.h  Touch.c
fw/s3-boy-fmsx/main/ap/fmsx/core/fMSX/: MSX.c  State.h
fw/s3-boy-fmsx/main/ap/fmsx/main/: fmsx.c  fmsx.h
fw/s3-boy-fmsx/main/ap/fmsx/main/s3-boy/: LibBOY.c  LibBOY.h  LibMain.c  NetUnix.c  SndBOY.c
fw/s3-boy-gnuboy/: CMakeLists.txt  sdkconfig
fw/s3-boy-gnuboy/main/: CMakeLists.txt  component.mk
fw/s3-boy-gnuboy/main/ap/: ap.cpp  ap.h
fw/s3-boy-gnuboy/main/ap/gnuboy/src/: cpu.c  debug.c  hw.c  mem.c  refresh.c
fw/s3-boy-gnuboy/main/ap/gnuboy/src/port/: esp32-boy.c
fw/s3-boy-launcher/: CMakeLists.txt  partitions.csv
fw/s3-boy-launcher/main/: CMakeLists.txt  Kconfig
fw/s3-boy-launcher/main/ap/: ap.cpp  ap.h  ap_def.h
fw/s3-boy-launcher/main/ap/app/hw_info/: hw_info.cpp  hw_info.h
fw/s3-boy-launcher/main/ap/app/ota/: ota.cpp  ota.h
fw/s3-boy-launcher/main/ap/launcher/: launcher.cpp  launcher.h
fw/s3-boy-launcher/main/ap/src/: ota.cpp  ota.h
main/: CMakeLists.txt  component.mk  main.c  main.cpp
main/ap/: ap.c  ap.cpp  test_img.c
main/bsp/: bsp.c  bsp.h
main/common/: def.h
main/common/hw/include/: adc.h  audio.h  button.h  cli.h  fatfs.h  files.h  gpio.h  lcd.h  led.h  mcp2515.h  mixer.h  nvs.h  reset.h  rtc.h  sd.h
main/hw/: hw.c  hw.h  hw_def.h
main/hw/driver/: adc.c  audio.c  battery.c  button.c  cdc.c  fatfs.c  files.c  gpio.c  i2s.c  lcd.c  led.c  log.c  mixer.c  pwm.c  resize.c  sd.c  uart.c
main/hw/driver/lcd/: logo_img.c  st7789.c
main/lib/lvgl/: lvgl.h
